@@ -168,7 +168,7 @@ public class CristinMapper extends CristinMappingModule {
     private static List<CristinContributor> sortCristinContributors(List<CristinContributor> cristinContributors) {
         return cristinContributors.stream()
                    .sorted(Comparator.nullsLast(Comparator.naturalOrder()))
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
     private static PublicationDate convertToPublicationDate(LocalDate publishedDate) {
@@ -217,7 +217,7 @@ public class CristinMapper extends CristinMappingModule {
     private List<CristinLocale> getValidCristinLocales() {
         return Optional.ofNullable(cristinObject.getCristinLocales())
                    .map(list -> list.stream().filter(this::doesNotContainInvalidInstitutionCode))
-                   .map(stream -> stream.collect(Collectors.toList()))
+                   .map(Stream::toList)
                    .orElse(List.of());
     }
 
@@ -258,7 +258,7 @@ public class CristinMapper extends CristinMappingModule {
 
     private List<Funding> mapToNvaFunding(List<CristinGrant> grants) {
         return grants.stream().map(CristinGrant::toNvaFunding)
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
     private void assertPublicationDoesNotHaveEmptyFields(Publication publication) {
@@ -278,13 +278,13 @@ public class CristinMapper extends CristinMappingModule {
 
     private List<ResearchProject> extractProjects() {
         if (cristinObject.getPresentationalWork() == null) {
-            return null;
+            return List.of();
         }
         return cristinObject.getPresentationalWork()
                    .stream()
                    .filter(CristinPresentationalWork::isProject)
                    .map(CristinPresentationalWork::toNvaResearchProject)
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
     private Organization extractOrganization() {
@@ -345,12 +345,12 @@ public class CristinMapper extends CristinMappingModule {
                    .map(cristinContributor -> attempt(() -> cristinContributor.toNvaContributor(cristinIdentifier,
                                                                                                 s3Client)))
                    .map(Try::orElseThrow)
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
     private List<URI> generateNvaHrcsCategoriesAndActivities() {
         if (isNull(extractCristinHrcsCategoriesAndActivities())) {
-            return null;
+            return List.of();
         }
         List<URI> listOfCategoriesAndActivities = new ArrayList<>();
         listOfCategoriesAndActivities.addAll(extractHrcsCategories());
@@ -369,7 +369,7 @@ public class CristinMapper extends CristinMappingModule {
                    .filter(CristinHrcsCategoriesAndActivities::validateCategory)
                    .map(categoryId -> HRCS_CATEGORY_URI + HRCS_CATEGORIES_MAP.get(categoryId).toLowerCase(Locale.ROOT))
                    .map(URI::create)
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
     private Collection<URI> extractHrcsActivities() {
@@ -379,7 +379,7 @@ public class CristinMapper extends CristinMappingModule {
                    .filter(CristinHrcsCategoriesAndActivities::validateActivity)
                    .map(activityId -> HRCS_ACTIVITY_URI + HRCS_ACTIVITIES_MAP.get(activityId).toLowerCase(Locale.ROOT))
                    .map(URI::create)
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
     private PublicationDate extractPublicationDate() {
@@ -522,7 +522,7 @@ public class CristinMapper extends CristinMappingModule {
     private List<String> extractTags() {
         var tags = extractCristinTags();
         if (isNull(tags)) {
-            return null;
+            return List.of();
         }
         return tags.stream()
                    .flatMap(tag -> Stream.of(tag.getBokmal(), tag.getEnglish(), tag.getNynorsk()))
